fix layout of cdf figures in notes

--- a/notes/04_density-transform/2_cdf.tex
+++ b/notes/04_density-transform/2_cdf.tex
@@ -4,10 +4,10 @@
 
 \only<1,2>{
 \begin{center}
-\begin{minipage}{0.45\textwidth}
+\begin{minipage}{\slidesonly{0.45}\notesonly{0.3}\textwidth}
 	\includegraphics[width=0.99\textwidth]{img/gauss_pdfcdf}
 \end{minipage}
-\begin{minipage}{0.45\textwidth}
+\begin{minipage}{\slidesonly{0.45}\notesonly{0.3}\textwidth}
 	\includegraphics[width=0.99\textwidth]{img/laplacian_pdfcdf}
 \end{minipage}
 \end{center}
@@ -21,10 +21,10 @@ interval $[0,1]$.
 
 \only<3>{
 \begin{center}
-\begin{minipage}{0.45\textwidth}
+\begin{minipage}{\slidesonly{0.45}\notesonly{0.3}\textwidth}
 	\includegraphics[width=0.99\textwidth]{img/gauss_cdfmarginals}
 \end{minipage}
-\begin{minipage}{0.45\textwidth}
+\begin{minipage}{\slidesonly{0.45}\notesonly{0.3}\textwidth}
 	\includegraphics[width=0.99\textwidth]{img/laplacian_cdfmarginals}
 \end{minipage}
 \end{center}
