hints during presentation

--- a/notes/02_online-pca/0_hebbian.tex
+++ b/notes/02_online-pca/0_hebbian.tex
@@ -17,6 +17,9 @@
 
 \begin{frame}{Non-stationary data}
 
+
+\textcolor{magenta}{Show them the data!}
+
 \pause
 
 \svspace{35mm}
@@ -138,7 +141,11 @@ for the \slidesonly{first PC}\notesonly{\emph{first principle component}} \citep
 
 \subsection{The Hebbian learning rule}
 
+
 \begin{frame}{\subsecname}
+
+
+\only<1>{\textcolor{magenta}{Show them the plots!}}
 \begin{equation}
 \vec w(t+1) = \vec w(t) + \underbrace{\varepsilon~y(\vec x^ {(\alpha)}; \vec w(t)) \vec x^{(\alpha)}}_{= \Delta \vec w}
 \end{equation}
