--- a/latex/headerMIslides.tex
+++ b/latex/headerMIslides.tex
@@ -96,7 +96,7 @@ inner ysep=10pt
 
 \title[MI 2 Tutorial]{Machine Intelligence 2 Tutorial}
 \institute[www.ni.tu-berlin.de]{Fachgebiet Neuronale Informationsverarbeitung (NI)}
-\author[NI]{Youssef Kashef}
+%\author[NI]{Youssef Kashef}
 \def\shortyear#1{\expandafter\shortyearhelper#1}
 \def\shortyearhelper#1#2#3#4{#3#4}
 \date{SoSe \shortyear{\the\year}}
