fix axis layout in 2d scatter plot

--- a/notes/05_infomax/0_ica_intro.tex
+++ b/notes/05_infomax/0_ica_intro.tex
@@ -130,7 +130,7 @@ $\Rightarrow$ The two variables are \emph{uncorrelated}.
 
 Consider the following two random scalar variables $X$ and $Y$:
 \begin{center}
-\includegraphics[width=0.4\textwidth]{img/uniform_fixed.png}
+\includegraphics[width=0.4\textwidth]{img/uniform_fixed}
 \end{center}
 
 Knowing anything about $X$ reveals absolutely nothing about $Y$, and vice-versa. This is because both variables are \emph{independent}. 
