--- a/notes/04_density-transform/1_prng.tex
+++ b/notes/04_density-transform/1_prng.tex
@@ -48,11 +48,11 @@ Then generalize this to transform one probability density function (pdf) into an
 
 \pause
 
-\slidesonly{
-\begin{center}
-	\includegraphics[width=0.3\textwidth]{img/meme_icanextweek}
-\end{center}
-}
+%\slidesonly{
+%\begin{center}
+	%\includegraphics[width=0.3\textwidth]{img/meme_icanextweek}
+%\end{center}
+%}
 
 }
 
@@ -64,7 +64,7 @@ Then generalize this to transform one probability density function (pdf) into an
 
 \begin{frame}\frametitle{Random Number Generators}
 
-\pause
+%\pause
 
 \slidesonly{
 \begin{center}
