--- a/notes/04_density-transform/3_density-transform.tex
+++ b/notes/04_density-transform/3_density-transform.tex
@@ -211,13 +211,13 @@ Because $dx_1$ is so small, \only<4->{we can approximate the transformed vector 
 which is essentially taking the limit $dx_1 \rightarrow 0$.\\
 The difference vector in $u(\Omega)$ becomes:}
 
-\only<3>{
-\slidesonly{
-\begin{center}
-\includegraphics[width=0.2\textwidth]{img/meme_notthisagain}
-\end{center}
-}
-}
+%\only<3>{
+%\slidesonly{
+%\begin{center}
+%\includegraphics[width=0.2\textwidth]{img/meme_notthisagain}
+%\end{center}
+%}
+%}
 
 \svspace{-3mm}
 
