remove unecessary pause

--- a/notes/05_infomax/1_primer_info_theory.tex
+++ b/notes/05_infomax/1_primer_info_theory.tex
@@ -21,32 +21,32 @@ Here we go over several measures from information theory which play a role in fo
 
 Entropy is a measure of uncertainty. It measures the average amount of information conveyed by a message.
 
-\pause
+%\pause
 
-\slidesonly{
+%\slidesonly{
 
-\svspace{3mm}
+%\svspace{3mm}
 
-\begin{minipage}{.99\textwidth}
-\begin{minipage}{0.3\textwidth}
-	\begin{center}
-		\includegraphics[width=0.9\textwidth]{img/meme_entropy1}
-	\end{center}
-\end{minipage}
-\hfill
-\begin{minipage}{0.3\textwidth}
-	\begin{center}
-		\includegraphics[width=0.7\textwidth]{img/meme_entropy2}
-	\end{center}
-\end{minipage}
-\hfill
-\begin{minipage}{0.3\textwidth}
-	\begin{center}
-		\includegraphics[width=0.8\textwidth]{img/meme_entropy_none}
-	\end{center}
-	\end{minipage}
-\end{minipage}
-}
+%\begin{minipage}{.99\textwidth}
+%\begin{minipage}{0.3\textwidth}
+	%\begin{center}
+		%\includegraphics[width=0.9\textwidth]{img/meme_entropy1}
+	%\end{center}
+%\end{minipage}
+%\hfill
+%\begin{minipage}{0.3\textwidth}
+	%\begin{center}
+		%\includegraphics[width=0.7\textwidth]{img/meme_entropy2}
+	%\end{center}
+%\end{minipage}
+%\hfill
+%\begin{minipage}{0.3\textwidth}
+	%\begin{center}
+		%\includegraphics[width=0.8\textwidth]{img/meme_entropy_none}
+	%\end{center}
+	%\end{minipage}
+%\end{minipage}
+%}
 
 \end{frame}
 
@@ -169,25 +169,25 @@ $H(Y|X)$ is whatever entropy the output $Y$ has that did not come from the input
 } - \citeauthor{bell1995information}
 }
 
-\pause
+%\pause
 
 %\svspace{-5mm}
 \begin{center}
 \slidesonly{
-	\includegraphics<2>[width=0.55\textwidth]{img/aldisain_Plasma_TV}
-	\includegraphics<3>[width=0.35\textwidth]{img/Wooden-TV_off}
-	\includegraphics<4>[width=0.35\textwidth]{img/Wooden-TV_on}
-	\includegraphics<5>[width=0.35\textwidth]{img/Wooden-TV_noise}
+	\includegraphics<1>[width=0.55\textwidth]{img/aldisain_Plasma_TV}
+	\includegraphics<2>[width=0.35\textwidth]{img/Wooden-TV_off}
+	\includegraphics<3>[width=0.35\textwidth]{img/Wooden-TV_on}
+	\includegraphics<4>[width=0.35\textwidth]{img/Wooden-TV_noise}
 }
-	\includegraphics<6,8>[width=0.35\textwidth]{img/Wooden-TV_on}
-	\includegraphics<7,8>[width=0.35\textwidth]{img/Wooden-TV_noise}
+	\includegraphics<5,7>[width=0.35\textwidth]{img/Wooden-TV_on}
+	\includegraphics<6,7>[width=0.35\textwidth]{img/Wooden-TV_noise}
 \end{center}
 
 \pause
 
 \svspace{-3mm}
 
-\visible<8>{
+\visible<7>{
 
 \question{Do $X$ and $Y$ have to have an input-output relationship to talk about conditional entropy?}
 
