layout and typo fixes

--- a/notes/05_infomax/0_ica_intro.tex
+++ b/notes/05_infomax/0_ica_intro.tex
@@ -186,7 +186,7 @@ Independence is a much stronger property than decorrelatedness.
 \end{center}
 }
 
-\pause
+%\pause
 
 If $X$ and $Y$ are independent, they are also uncorrelated, but the same cannot always be said the other way around.
 
@@ -194,7 +194,7 @@ If $X$ and $Y$ are independent, they are also uncorrelated, but the same cannot 
 
 \end{frame}
 
-\begin{frame}{Uncorrelatedness vs. statistical independence}
+\begin{frame}{Uncorrelatedness vs. statistical independence: Example}
 
 \only<1>{
 Example\footnote{\notesonly{Example obtained} from (Hyv\"arinen, A., \& Oja, E. (2000). Independent component analysis: algorithms and applications. Neural networks, 13(4-5), 411-430.)}:
