--- a/notes/06_fastica/2_pcaica.tex
+++ b/notes/06_fastica/2_pcaica.tex
@@ -249,6 +249,8 @@ $$N^2 \rightarrow N(N-1)/2$$
 
 \question{Does this mean that $\vec W$ is no longer $N \times N$?}
 
+\pause
+
 -No $\vec W$ is still $N \times N$, but we no longer have to search for each component individually.
 
 \end{frame}
