--- a/notes/06_fastica/0_recap_ica_whitening.tex
+++ b/notes/06_fastica/0_recap_ica_whitening.tex
@@ -85,7 +85,7 @@ The whitening transformation yields:
 
 where
 \begin{itemize}
-\item[] $\vec M = (\vec e_1, \vec e_2, \ldots,\vec e_N)$ is the orthonormal eigenbasis of $\Sigma_x$
+\item[] $\vec M = (\vec e_1, \vec e_2, \ldots,\vec e_N)$ is the orthonormal eigenbasis of $\vec \Sigma_x$
 \item[] and $\vec\Lambda$ is diagonal matrix with the corresponding eigenvalues.
 \end{itemize}
 
