--- a/notes/06_fastica/0_recap_ica_whitening.tex
+++ b/notes/06_fastica/0_recap_ica_whitening.tex
@@ -7,17 +7,17 @@ observations: $\vec x \in \R^N$
 
 \begin{equation}
 \label{eq:ica}
-\vec x = \vec A \, \vec s
+\vec x = \vec A~\vec s
 \end{equation}
 
 \begin{equation}
-\widehat{\vec s} = \vec W \vec x
+\widehat{\vec s} = \vec W~\vec x
 \end{equation}
 
 Methods for solving the ICA problem:
 
 \begin{itemize}
-\item maximizing the \emph{mutual information} between $\vec x$ and $\vec {\hat s}$ \\
+\item maximizing the \emph{mutual information} between $\vec x$ and $\vec {\widehat s}$ \\
 (e.g. Infomax)
 \item maximizing the \emph{nongaussianity} of $\widehat {\vec s}$ \\
 (e.g. Kurtosis-based ICA, FastICA)
