--- a/notes/06_fastica/5_fastica.tex
+++ b/notes/06_fastica/5_fastica.tex
@@ -206,6 +206,6 @@ The contrast function can be chosen depending on the assumed shape of the source
 \begin{frame}
 \question{How do we evaluate ICA?}\\
 
-- Visualization methods\footnote{If interested cf. https://research.ics.aalto.fi/ica/icasso/}
+- Visualization methods\footnote{If interested cf. \href{https://research.ics.aalto.fi/ica/icasso/}{https://research.ics.aalto.fi/ica/icasso/}}
 \end{frame}
 
