separate footnote marker from expression

--- a/notes/07_stochopt/3_stochopt.tex
+++ b/notes/07_stochopt/3_stochopt.tex
@@ -151,7 +151,7 @@ This is the \emph{exploitation} mode. This reflects the behavior of a greedy lea
 }
 
 \begin{frame}\frametitle{Annealing schedule \& convergence}
-Convergence to the global optimum is guaranteed if $\beta_t \sim \ln (t)$\footnote{shown in \citep{geman1984stochastic}}
+Convergence to the global optimum is guaranteed if $\beta_t \sim \ln (t)$.~\footnote{shown in \citep{geman1984stochastic}}
 
 \begin{itemize}
 	% \itR robust optimization procedure
