--- a/notes/07_stochopt/4_deterministic.tex
+++ b/notes/07_stochopt/4_deterministic.tex
@@ -44,20 +44,23 @@
 
 }
 
-\only<2>{
+\only<2,3>{
 \question{Why fixate on the first moment?}
 
-\pause
+}
+\only<3>{
 
 - to localize the peak of the distribution as entropy decreases. 
 At $\beta_t \rightarrow \infty$, the peak will have localized around the state where the cost is minimal, revealing the optimal state $\vec s^*$
 
 }
 
-\only<3>{
+\only<4->{
 
 \question{Do we still need the annealing process?}
 
+}
+\only<5>{
 -Yes, because still need a tradeoff between exploration and exploitation.
 }
 
