figure layout and citation

--- a/notes/10_lle/1_embedding.tex
+++ b/notes/10_lle/1_embedding.tex
@@ -39,12 +39,12 @@ Looking at \figref{fig:s_data_proj_lle} we see that the nonlinear manifold is pr
  \frametitle{PCA vs. Locally Linear Embedding (LLE)}
 }
 
-\svspace{-5mm}
+\svspace{-3mm}
  
 \begin{figure}[ht]
 	\centering
-    \includegraphics[width=0.3\textwidth]{img/fig3_lle_intro_cropped.png}
-	\caption{PCA projections and LLE of translated versions of the same image. What would be the coordinates of the face-in-bottom-left-corner-image be? \cite{Saul2001AnIT}}
+    \includegraphics[trim={0 0 0 40mm},clip,width=0.3\textwidth]{img/fig3_lle_intro_cropped.png}
+	\caption{PCA projections and LLE of translated versions of the same image \cite{Saul2001AnIT}. What would be the coordinates of the face-in-bottom-left-corner-image?}
 	\label{fig:faces_translated_pca_lle}
 \end{figure}
 \end{frame}
