add neg log likelihood plot

--- a/notes/11_density-est/2_mle.tex
+++ b/notes/11_density-est/2_mle.tex
@@ -79,6 +79,16 @@ Equivalent to:
 
 except that $P(\vec{x})$ is unknown.
 
+\slidesonly{
+\placeimage{11.6}{7}{img/loglikelihood}{width=3.5cm}
+}
+\notesonly{
+\begin{figure}
+    \centering
+	\includegraphics[width=0.4\textwidth]{img/loglikelihood}
+    \caption{The negative log-likelihood function.}
+\end{figure}
+}
 \end{frame}
 
 \begin{frame}{Generalization on unseen data}
