--- a/notes/12_gmm-em/1_mix.tex
+++ b/notes/12_gmm-em/1_mix.tex
@@ -98,7 +98,7 @@ Find estimates for the parameters by maximizing the log-likelihood. This is equi
 
 \begin{align}
 E^T = - \ln P_{\left( \left\{ \vec{x}^{(\alpha)} \right\} \right)} &= - \sum_{\alpha=1}^{p} \ln \sum_{q=1}^{M} P_{(\vec{x}^{(\alpha)} | q)} P_{(q)} \eqexcl \min_{\text{parameters}}\\
-&= - {\color{blue}\mathcal{N}(\mu_1, \sigma^2_1)~P_{(q_1)}} + {\color{orange}\mathcal{N}(\mu_2, \sigma^2_1)~P_{(q_2)}}
+&= - {\color{blue}\mathcal{N}(\mu_1, \sigma^2_1)~P_{(q_1)}} - {\color{orange}\mathcal{N}(\mu_2, \sigma^2_1)~P_{(q_2)}}
 \eqexcl
 \kern-2ex
 \min_{\substack{
