the window should be h/2

--- a/notes/11_density-est/1_kde.tex
+++ b/notes/11_density-est/1_kde.tex
@@ -126,7 +126,7 @@ Density estimate (``gliding histogram''):
 		H \bigg( \frac{{x} - {x}^{(\alpha)}}{
 			h} \bigg) }^{
 		\substack{\text{number of data points}\\
-			\text{within window } (x-\frac{1}{2}, x+\frac{1}{2}) \\
+			\text{within window } (x-\frac{h}{2}, x+\frac{h}{2}) \\
 			\text{ around } {x}}} }_{
 	\text{fraction of data points}}
 \end{equation*}
