use math mode for q

--- a/notes/12_gmm-em/1_mix.tex
+++ b/notes/12_gmm-em/1_mix.tex
@@ -233,7 +233,7 @@ P_{(q | \vec{x})} P_{(\vec{x})} &= P_{(\vec{x} | q)} P_{(q)} \\
 P_{(q | \vec{x})} &= \frac{P_{(\vec{x} | q)} P_{(q)}}{P_{(\vec{x})}}
 \end{align}
 
-$P_{(q | \vec{x})}$: posterior probability of component q having generated a given data point $\vec{x}$
+$P_{(q | \vec{x})}$: posterior probability of component $q$ having generated a given data point $\vec{x}$
 
 }
 
