--- a/notes/05_infomax/1_primer_info_theory.tex
+++ b/notes/05_infomax/1_primer_info_theory.tex
@@ -452,7 +452,7 @@ The above is only equal if both of them are equal to zero, which is satisfied if
 This tells us that the mutual information $I(X,Y)$ is equivalent to the KL-divergence between the joint distribution $p_{X,Y}(x,y)$ and 
 the product of the pdfs $p_X(x)$ and $p_Y(y)$. A special case of this is what we saw in the first approach, namely the KL-divergence 
 between the pdf of a random vector $\widehat {\vec s}$ of length $N$ and the marginal probability density functions for $N$ elements 
-$\widehat{s_i}$\footnote{A much smoother walkthrough for this can be found in 
+$\widehat{s_i}$.~\footnote{A much smoother walkthrough for this can be found in 
 Haykin Ch. 10.5}
 }
 \slidesonly{
