--- a/latex/minotes.cls
+++ b/latex/minotes.cls
@@ -3,7 +3,10 @@
 
 % packages and classes, scrartcle is an extended article 
 %\LoadClass[a4paper]{scrbook}  % has chapters but needs formatting
-\LoadClass[a4paper]{scrartcl} % doesn't have chapters - see workaround
+\LoadClass[a4paper,%
+            toc=flat,% <- added
+            ]%
+            {scrartcl} % doesn't have chapters - see workaround
 \RequirePackage{scrlayer-scrpage, times, amsmath, amssymb, bm}
 \RequirePackage{etoolbox, comment} % not ifthen, xstring, 
 \RequirePackage[latin9]{inputenc}
@@ -48,7 +51,6 @@
 %\addtolength{\cftsecnumwidth}{10pt}
 %\addtolength{\cftsubsecnumwidth}{10pt}
 %\addtolength{\cftsubsubsecnumwidth}{10pt}
-\usepackage[tocindentauto]{tocstyle}
 %% TOC - END
 
 % Update the following presets
