--- a/latex/minotes.cls
+++ b/latex/minotes.cls
@@ -3,10 +3,7 @@
 
 % packages and classes, scrartcle is an extended article 
 %\LoadClass[a4paper]{scrbook}  % has chapters but needs formatting
-\LoadClass[a4paper,%
-            toc=flat,% <- added
-            ]%
-            {scrartcl} % doesn't have chapters - see workaround
+\LoadClass[a4paper]{scrartcl} % doesn't have chapters - see workaround
 \RequirePackage{scrlayer-scrpage, times, amsmath, amssymb, bm}
 \RequirePackage{etoolbox, comment} % not ifthen, xstring, 
 \RequirePackage[latin9]{inputenc}
@@ -30,7 +27,6 @@
 \newsavebox{\imagebox}
 \usepackage{xcolor,cancel}
 \usepackage{soul} % for strikethrough
-\usepackage{tocloft} % for spacing in toc
 
 % Margins - BEGIN
 \setlength{\oddsidemargin}{0.25 in}
@@ -44,14 +40,11 @@
 % Margins - END
 
 % TOC - BEGIN
-%% Requires KOMA-Script version > 3.15
-%\RedeclareSectionCommand[tocnumwidth=3.0em]{section}
-%\RedeclareSectionCommand[tocnumwidth=3.5em]{subsection}
-%\RedeclareSectionCommand[tocnumwidth=4.0em]{subsubsection}
-%\addtolength{\cftsecnumwidth}{10pt}
-%\addtolength{\cftsubsecnumwidth}{10pt}
-%\addtolength{\cftsubsubsecnumwidth}{10pt}
-%% TOC - END
+% Requires KOMA-Script version > 3.15
+\RedeclareSectionCommand[tocnumwidth=3.0em]{section}
+\RedeclareSectionCommand[tocnumwidth=3.5em]{subsection}
+\RedeclareSectionCommand[tocnumwidth=4.0em]{subsubsection}
+% TOC - END
 
 % Update the following presets
 % presets - BEGIN
